[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/upheavtt_80.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/upheavtt_40.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/AchievementMenu.gd" type="Script" id=4]

[node name="AchievementMenu" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.462745, 0.462745, 0.462745, 1 )

[node name="Label" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 83.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 1 )
text = "Achievements"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 83.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.258824, 0.258824, 0.258824, 1 )

[node name="QuitButton" type="Button" parent="."]
margin_left = 1200.0
margin_top = 10.0
margin_right = 1260.0
margin_bottom = 70.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 83.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="Achievements" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1280.0
margin_bottom = 637.0
rect_pivot_offset = Vector2( -444, -64 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Unlocked" type="Label" parent="ScrollContainer/Achievements"]
margin_right = 1280.0
margin_bottom = 36.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 2 )
text = "Unlocked"

[node name="UnlockedAchievements" type="VBoxContainer" parent="ScrollContainer/Achievements"]
margin_top = 40.0
margin_right = 1280.0
margin_bottom = 40.0

[node name="Locked" type="Label" parent="ScrollContainer/Achievements"]
margin_top = 44.0
margin_right = 1280.0
margin_bottom = 80.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 2 )
text = "Locked"

[node name="LockedAchievements" type="VBoxContainer" parent="ScrollContainer/Achievements"]
margin_top = 84.0
margin_right = 1280.0
margin_bottom = 84.0
custom_constants/separation = 20

[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
